# xore

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  dist-workspace.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  getting-started.md  mcp.md  performance-report.md  semantic-search-guide.md
docs/commands/: README.md  agent.md  benchmark.md  find.md  process.md
docs/reference/: configuration.md  environment.md  filters.md
examples/: README.md
examples/benchmark-data/: README.md  generate_logs_7days.sh  generate_todo_project.sh
examples/benchmark-data/logs_7days/: README.md  all_logs.csv  app_01_00.csv  app_01_01.csv  app_01_02.csv  app_01_03.csv  app_01_04.csv  app_01_05.csv  app_01_06.csv  app_01_07.csv  app_01_08.csv  app_01_09.csv  app_01_10.csv  app_01_11.csv  app_01_12.csv  app_01_13.csv  app_01_14.csv  app_01_15.csv  app_01_16.csv  app_01_17.csv  app_01_18.csv  app_01_19.csv  app_01_20.csv  app_01_21.csv  app_01_22.csv  app_01_23.csv  app_02_00.csv  app_02_01.csv  app_02_02.csv  app_02_03.csv  app_02_04.csv  app_02_05.csv  app_02_06.csv  app_02_07.csv  app_02_08.csv  app_02_09.csv  app_02_10.csv  app_02_11.csv  app_02_12.csv  app_02_13.csv  (+130 more)
examples/benchmark-data/medium/: sales_medium.parquet  test_medium.db
examples/benchmark-data/small/: access_log.tsv  error_log.yaml  sales_small.csv  sales_small.json  sales_small.parquet  server_log_small.json  test_small.db  users_small.csv  users_small.parquet
examples/benchmark-data/todo_project/: Cargo.toml  README.md  README_BENCHMARK.md  config.yaml
examples/benchmark-data/todo_project/src/api/: api_1.rs  api_2.rs  api_3.rs  api_4.rs  api_5.rs  api_6.rs  api_7.rs
examples/benchmark-data/todo_project/src/auth/: auth_1.rs  auth_2.rs  auth_3.rs  auth_4.rs  auth_5.rs  auth_6.rs  auth_7.rs
examples/benchmark-data/todo_project/src/database/: database_1.rs  database_2.rs  database_3.rs  database_4.rs  database_5.rs  database_6.rs  database_7.rs  database_8.rs
examples/benchmark-data/todo_project/src/handlers/: handlers_1.rs  handlers_2.rs  handlers_3.rs  handlers_4.rs
examples/benchmark-data/todo_project/src/middleware/: middleware_1.rs  middleware_2.rs  middleware_3.rs  middleware_4.rs  middleware_5.rs  middleware_6.rs
examples/benchmark-data/todo_project/src/models/: models_1.rs  models_2.rs  models_3.rs
examples/benchmark-data/todo_project/src/services/: services_1.rs  services_2.rs  services_3.rs
examples/benchmark-data/todo_project/src/utils/: utils_1.rs  utils_2.rs  utils_3.rs  utils_4.rs
examples/benchmark-data/todo_project/tests/api/: test_api_2.rs
examples/benchmark-data/todo_project/tests/auth/: test_auth_1.rs
examples/benchmark-data/todo_project/tests/database/: test_database_1.rs
examples/benchmark-data/todo_project/tests/handlers/: test_handlers_1.rs  test_handlers_2.rs
examples/benchmark-data/todo_project/tests/middleware/: test_middleware_1.rs
examples/benchmark-data/todo_project/tests/models/: test_models_2.rs  test_models_3.rs
examples/benchmark-data/todo_project/tests/services/: test_services_1.rs  test_services_2.rs
examples/benchmark-data/todo_project/tests/utils/: test_utils_1.rs
examples/benchmark-results/: README.md  benchmark_results_20260305_224940.txt  benchmark_results_20260308_155920.txt  run_benchmark.sh
examples/search-examples/: demo.sh
xore-ai/: Cargo.toml  README.md
xore-ai/src/: embedding.rs  lib.rs  search.rs  tokenizer.rs
xore-cli/: Cargo.toml
xore-cli/src/: main.rs
xore-cli/src/commands/: abyss.rs  agent.rs  benchmark.rs  config.rs  find.rs  mod.rs  peek.rs  process.rs  watch.rs
xore-cli/src/ui/: colors.rs  mod.rs  progress.rs  table.rs  terminal.rs
xore-cli/tests/: cli_integration_tests.rs
xore-config/: Cargo.toml
xore-config/src/: config.rs  env.rs  lib.rs  paths.rs
xore-core/: Cargo.toml
xore-core/src/: config.rs  context.rs  error.rs  history.rs  lib.rs  logging.rs  output.rs  recommendation.rs  types.rs
xore-core/src/error/: format.rs  mod.rs
xore-core/tests/: config_tests.rs  error_tests.rs  logging_tests.rs  types_tests.rs
xore-mcp/: Cargo.toml
xore-mcp/src/: error.rs  helpers.rs  main.rs  server.rs
xore-process/: Cargo.toml
xore-process/benches/: simd_bench.rs
xore-process/src/: export.rs  lib.rs  parser.rs  profiler.rs  simd.rs  sql.rs
xore-search/: Cargo.toml
xore-search/benches/: allocator_bench.rs
xore-search/src/: incremental.rs  indexer.rs  lib.rs  query.rs  scanner.rs  tokenizer.rs  watcher.rs
xore-search/tests/: indexer_tests.rs  integration_tests.rs  query_tests.rs  scanner_tests.rs
