[package]
name = "xore-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XORE AI Module - Semantic embeddings and vector search"

[dependencies]
# 内部依赖
xore-core = { path = "../xore-core", version = "1.0.0" }

# AI/ML
ort.workspace = true
tokenizers.workspace = true

# 线性代数
ndarray = "0.15"

# 并发
tokio.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 序列化
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
