[package]
name = "xore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XORE CLI - Command-line interface for search and data processing"

[[bin]]
name = "xore"
path = "src/main.rs"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
# 性能优化 - 可选分配器
mimalloc = { workspace = true, optional = true }
# 内部依赖
xore-config = { path = "../xore-config", version = "1.0.3" }
xore-core = { path = "../xore-core", version = "1.0.3" }
xore-search = { path = "../xore-search", version = "1.0.3" }
xore-process = { path = "../xore-process", version = "1.0.3" }
xore-ai = { path = "../xore-ai", version = "1.0.3" }

# 数据处理
polars = { workspace = true }

# CLI框架
clap.workspace = true
colored.workspace = true
indicatif.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# 并发
tokio.workspace = true

# 随机数生成
rand = "0.8"

# 日期时间
chrono.workspace = true

# 路径工具
dirs.workspace = true

# 一次性初始化
once_cell.workspace = true

# 平台相关
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
