[package]
name = "xore-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

description = "XORE 配置管理模块 - 统一的配置加载和路径管理"

[dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 路径工具
dirs = "5.0"

# 日志
tracing = "0.1"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
