[package]
name = "xore-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XORE Core - Shared types and utilities"

[dependencies]
# 并发
num_cpus.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# 路径处理
walkdir.workspace = true

# 日期时间
chrono.workspace = true

# 路径工具
dirs.workspace = true

# XORE 配置
xore-config = { path = "../xore-config", version = "1.0.0" }

[dev-dependencies]
tempfile.workspace = true
