[package]
name = "xore-process"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XORE Data Processor - High-performance data processing and SQL engine"

[dependencies]
# 内部依赖
xore-core = { path = "../xore-core" }

# 数据处理
polars.workspace = true

# SQL解析
sqlparser.workspace = true

# 内存映射
memmap2.workspace = true

# 并发
tokio.workspace = true
rayon.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true
