[package]
name = "xore-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "XORE Search Engine - Full-text and semantic search"

[dependencies]
# 内部依赖
xore-core = { path = "../xore-core", version = "1.0.2" }
xore-ai = { path = "../xore-ai", version = "1.0.2" }

# 搜索引擎
tantivy.workspace = true
fst.workspace = true
jieba-rs.workspace = true

# 文件监控
notify.workspace = true
walkdir.workspace = true
ignore.workspace = true

# 存储
sled.workspace = true
memmap2.workspace = true

# 并发
tokio.workspace = true
rayon.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# 日期时间
chrono.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "allocator_bench"
harness = false
